armando el carrito

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
   <hr />
 
   <main>
+    <!--aqui agrego carrito-->
+
+    <div id="carrito" class="carrito">
+      <h2>Carrito de Compras</h2>
+      <ul id="lista-carrito">
+        <!-- Aquí se mostrarán los lotes seleccionados -->
+      </ul>
+    </div>
+    
+    <!-- fin carrito-->
 
     <button id="ingreso1" class="btn btn-search ">Mostrar todos los lotes disponibles</button>
     <br><br>
